--- a/frontend/src/app/components/modal/modal.component.html
+++ b/frontend/src/app/components/modal/modal.component.html
@@ -171,7 +171,7 @@
                                 
                                   <!-- Buttons -->
                                   <div class="text-center">
-                                        <a class="btn btn-primary btn-round btn-lg btn-block" data-dismiss="modal" (click)="login()" [routerLink]="['/profiles/custprofile']">SignIn</a>
+                                        <a class="btn btn-primary btn-round btn-lg btn-block" data-dismiss="modal" (click)="signin()" [routerLink]="['/profiles/custprofile']">SignIn</a>
                                     </div>
                                     <!-- /Button -->
                                 </div>
