--- a/frontend/src/app/components/modal/modal.component.html
+++ b/frontend/src/app/components/modal/modal.component.html
@@ -21,26 +21,16 @@
                         <div class="content">
 
                           <!-- Username -->
-                          <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus===true}">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text">  <i class="now-ui-icons users_circle-08"></i></span>
-                            </div>
-                              <input type="text" class="form-control" placeholder="Username" (focus)="focus=true" (blur)="focus=false" >
-                          </div>
+                          <div class="form-group"><label>Username</label><input [(ngModel)]="userData.username" name="username" class="form-control border-input" placeholder="username" type="username" require></div>
                           <!-- /Username -->
                         
-                          <!-- Password -->
-                          <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus1===true}">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text"><i class="now-ui-icons text_caps-small"></i></span>
-                            </div>
-                              <input type="password" placeholder="Password" class="form-control" (focus)="focus1=true" (blur)="focus1=false"/>
-                          </div>
-                          <!-- /Password -->
+                         <!-- Password -->
+                         <div class="form-group"><label>Password</label><input [(ngModel)]="userData.password" name="password" class="form-control border-input" placeholder="Password" type="password" require></div>
+                         <!-- /Password -->
                         
                           <!-- Buttons -->
                           <div class="text-center">
-                                <a class="btn btn-primary btn-round btn-lg btn-block" data-dismiss="modal" (click)="close()" [routerLink]="['/profiles/custprofile']">LogIn</a>
+                                <a class="btn btn-primary btn-round btn-lg btn-block" data-dismiss="modal" (click)="login()" [routerLink]="['/profiles/custprofile']">LogIn</a>
                             </div>
                             <div class="pull-left">
                                 <h6>
@@ -171,7 +161,7 @@
                                 
                                   <!-- Buttons -->
                                   <div class="text-center">
-                                        <a class="btn btn-primary btn-round btn-lg btn-block" data-dismiss="modal" (click)="signin()" [routerLink]="['/profiles/custprofile']">SignIn</a>
+                                        <a class="btn btn-primary btn-round btn-lg btn-block" data-dismiss="modal" (click)="custsignin()" [routerLink]="['/profiles/custprofile']">SignIn</a>
                                     </div>
                                     <!-- /Button -->
                                 </div>
@@ -250,7 +240,7 @@
                                     
                                       <!-- Buttons -->
                                       <div class="text-center">
-                                            <a class="btn btn-primary btn-round btn-lg btn-block" data-dismiss="modal" (click)="close()" [routerLink]="['/profiles/sellerprofile']">SignIn</a>
+                                            <a class="btn btn-primary btn-round btn-lg btn-block" data-dismiss="modal" (click)="sellerlogin()" [routerLink]="['/profiles/sellerprofile']">SignIn</a>
                                         </div>
                                         <!-- /Button -->
                                     </div>
