--- a/frontend/src/app/profiles/sellerprofile/sellerprofile.component.html
+++ b/frontend/src/app/profiles/sellerprofile/sellerprofile.component.html
@@ -39,7 +39,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                            <form>
+                            <!--<form>
                                     <div class="form-group form-inline">
                                         Search <input class="form-control ml-2" type="text" name="searchTerm" [(ngModel)]="service.searchTerm"/>
                                         <span class="ml-3" *ngIf="service.loading$ | async">Loading...</span>
@@ -81,7 +81,7 @@
                                         </select>
                                     </div>
                     
-                                    </form>
+                                    </form>-->
         
                     </div>
                 </div>
