--- a/frontend/src/app/components/modal/modal.component.html
+++ b/frontend/src/app/components/modal/modal.component.html
@@ -191,24 +191,32 @@
                     <div class="container">
                         <div class="col-md-10 content-center">
                             <div class="card card-login card-plain">
-                                <form class="form" method="" action="">
+                                <form #sellerSignInForm = "ngForm" class="form" method="" action="" required>
                                     <div class="content">
             
                                     
                                       <!-- Shop Name -->
-                                      <div class="form-group"><label>Shop Name</label><input class="form-control border-input" placeholder="Shop Name" type="text" ></div>
+                                      <div class="form-group"><label>Shop Name</label><input class="form-control border-input" placeholder="Shop Name" type="text" required></div>
                                       <!-- /Shop Name -->
 
                                       <!-- Identification Number -->
-                                      <div class="form-group"><label>Identification Number</label><input class="form-control border-input" placeholder="Identification Number" type="text" ></div>
+                                      <div class="form-group"><label>Identification Number</label><input class="form-control border-input" placeholder="Identification Number" type="text" required></div>
                                       <!-- /Identification Number -->
+
+                                      <!-- Password -->
+                                      <div class="form-group"><label>Password</label><input class="form-control border-input" placeholder="Password" type="password" required></div>
+                                      <!-- /Password -->
+
+                                      <!-- cPassword -->
+                                      <div class="form-group"><label>Confirm Password</label><input class="form-control border-input" placeholder="Confirm Password" type="password" required></div>
+                                      <!-- /cPassword -->
     
                                       <!-- Email -->
-                                      <div class="form-group"><label>Email</label><input class="form-control border-input" placeholder="Email" type="text" ></div>
+                                      <div class="form-group"><label>Email</label><input class="form-control border-input" placeholder="Email" type="text" required></div>
                                       <!-- /Email -->
     
                                       <!-- Telephone-->
-                                      <div class="form-group"><label>Telephone</label><input class="form-control border-input" placeholder="Telephone Number" type="text" ></div>
+                                      <div class="form-group"><label>Telephone</label><input class="form-control border-input" placeholder="Telephone Number" type="text" required></div>
                                       <!-- /Telephone -->
     
                                      <!-- Address-->
@@ -216,22 +224,22 @@
                                         <div class="col-md-10 col-sm-6">
                                             <div class="form-group">
                                                 <label>Address</label>
-                                                <input class="form-control border-input" placeholder="Line 1" type="text" >
+                                                <input class="form-control border-input" placeholder="Line 1" type="text" required>
                                             </div>
                                         </div>
                                         <div class="col-md-10 col-sm-6">
                                             <div class="form-group">
-                                                <input class="form-control border-input" placeholder="Line 2" type="text" >
+                                                <input class="form-control border-input" placeholder="Line 2" type="text" required>
                                             </div>
                                         </div>
                                         <div class="col-md-10 col-sm-6">
                                             <div class="form-group">
-                                                <input class="form-control border-input" placeholder="City" type="text" >
+                                                <input class="form-control border-input" placeholder="City" type="text" required>
                                             </div>
                                         </div>
                                         <div class="col-md-10 col-sm-6">
                                             <div class="form-group">
-                                                <input class="form-control border-input" placeholder="Province" type="text" >
+                                                <input class="form-control border-input" placeholder="Province" type="text" required>
                                             </div>
                                         </div>
                                      </div>
