--- a/frontend/src/app/components/modal/modal.component.html
+++ b/frontend/src/app/components/modal/modal.component.html
@@ -1,5 +1,5 @@
 <!--Login-->
-<button class="btn btn-primary btn-lg btn-round" (click)="open(classic,'' , '')">LogIn</button>
+<button class="btn btn-primary btn-lg btn-round" (click)="[open(classic,'' , '')]" >LogIn</button>
 <ng-template #classic let-c="close" let-d="dismiss">
     
     <!-- Head -->
@@ -12,21 +12,31 @@
     <br>
     <!-- /Head -->
 
-    
-
         <div class="container">
             <div class="col-md-12 content-center">
                 <div class="card card-login card-plain">
-                    <form class="form" method="" action="">
+                    <form class="form" method="" action="" [formGroup]="loginForm">
                         <div class="content">
                             <div class="mt-5">
-                                <!-- Username -->
-                                <div class="form-group"><label>Username</label><input [(ngModel)]="userData.username" name="username" class="form-control border-input" placeholder="username" type="username" require></div>
+
+                                <div class="form-group"><label>Username</label>
+                                <input [(ngModel)]="userData.username" formControlName="username" class="form-control border-input" placeholder="username" type="username" [ngClass]="{'is-invalid':loginForm.get('username').touched && loginForm.get('username').invalid}">
+                                <div class="invalid-feedback">
+                                    <div>Username is required</div>
+                                </div>
+                                </div>
+                                 
+
                                 <!-- /Username -->
                             </div>
                             <div class="mt-5">
                                 <!-- Password -->
-                                <div class="form-group"><label>Password</label><input [(ngModel)]="userData.password" name="password" class="form-control border-input" placeholder="Password" type="password" require></div>
+                                <div class="form-group"><label>Password</label>
+                                <input [(ngModel)]="userData.password" formControlName="password" class="form-control border-input" placeholder="Password" type="password" [ngClass]="{'is-invalid':loginForm.get('password').touched && loginForm.get('password').invalid}">
+                                <div class="invalid-feedback">
+                                        <div>Password is required</div>
+                                </div>
+                                </div>
                                 <!-- /Password -->
                             </div>
                             <div class="mt-5">
