--- a/frontend/src/app/profiles/custprofile/custprofile.component.html
+++ b/frontend/src/app/profiles/custprofile/custprofile.component.html
@@ -31,62 +31,122 @@
         </div>
     </div>
 
-
-
-
+    <!-- Broadcast Table -->
     <div class="section">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <!--
-                <form>
-                <div class="form-group form-inline">
-                    Search <input class="form-control ml-2" type="text" name="searchTerm" [(ngModel)]="service.searchTerm"/>
-                    <span class="ml-3" *ngIf="service.loading$ | async">Loading...</span>
-                </div>
+                    <h3>Recent Broadcasts</h3>
+                    <form>
+                        <div class="form-group form-inline">
+                            Search <input class="form-control ml-2" type="text" name="searchTerm"
+                                [(ngModel)]="service.searchTerm" />
+                            <span class="ml-3" *ngIf="service.loading$ | async">Loading...</span>
+                        </div>
 
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th scope="col">Number</th>
-                            <th scope="col" sortable="name" (sort)="onSort($event)">Shop Name</th>
-                            <th scope="col" sortable="area" (sort)="onSort($event)">Product</th>
-                            <th scope="col" sortable="message" (sort)="onSort($event)">Messages</th>
-                            <th scope="col">Finalize</th>
-                            <th scope="col">Action</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    <tr *ngFor="let country of countries$ | async">
-                        <th scope="row">{{ country.id }}</th>
-                            <td>
-                                <img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag" class="mr-2" style="width: 20px">
-                                <ngb-highlight [result]="country.name" [term]="service.searchTerm"></ngb-highlight>
-                            </td>
-                        <td><ngb-highlight [result]="country.area | number" [term]="service.searchTerm"></ngb-highlight></td>
-                        <td><ngb-highlight [result]="country.population | number" [term]="service.searchTerm"></ngb-highlight></td>
-                    </tr>
-                    </tbody>
-                </table>
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Number</th>
+                                    <th scope="col" sortable="name" (sort)="onSort($event)">Shop Name</th>
+                                    <th scope="col" sortable="area" (sort)="onSort($event)">Product</th>
+                                    <th scope="col" sortable="message" (sort)="onSort($event)">Messages</th>
+                                    <th scope="col">Finalize</th>
+                                    <th scope="col">Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td scope="row">BC</td>
+                                    <td scope="row">BC</td>
+                                    <td scope="row">BC</td>
+                                    <td scope="row">BC</td>
+                                    <td scope="row">BC</td>
+                                    <td scope="row">BC</td>
+                                </tr>
+                            </tbody>
+                        </table>
 
-                <div class="d-flex justify-content-between p-2">
-                    <ngb-pagination
-                    [collectionSize]="total$ | async" [(page)]="service.page" [pageSize]="service.pageSize">
-                    </ngb-pagination>
+                        <div class="d-flex justify-content-between p-2">
+                            <ngb-pagination [collectionSize]="total$ | async" [(page)]="service.page"
+                                [pageSize]="service.pageSize">
+                            </ngb-pagination>
 
-                    <select class="custom-select" style="width: auto" name="pageSize" [(ngModel)]="service.pageSize">
-                    <option [ngValue]="2">2 items per page</option>
-                    <option [ngValue]="4">4 items per page</option>
-                    <option [ngValue]="6">6 items per page</option>
-                    </select>
-                </div>
+                            <!-- <select class="custom-select" style="width: auto" name="pageSize"
+                                    [(ngModel)]="service.pageSize">
+                                    <option [ngValue]="2">2 items per page</option>
+                                    <option [ngValue]="4">4 items per page</option>
+                                    <option [ngValue]="6">6 items per page</option>
+                                </select> -->
+                        </div>
 
-                </form>
-            -->
+                    </form>
+
                 </div>
             </div>
         </div>
     </div>
+    <!-- /Broadcast Table -->
+
+
+    <!-- Recent Table -->
+    <div class="section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h3>Recent Purchases</h3>
+                    <form>
+                        <div class="form-group form-inline">
+                            Search <input class="form-control ml-2" type="text" name="searchTerm"
+                                [(ngModel)]="service.searchTerm" />
+                            <span class="ml-3" *ngIf="service.loading$ | async">Loading...</span>
+                        </div>
+
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Number</th>
+                                    <th scope="col" sortable="name" (sort)="onSort($event)">Shop Name</th>
+                                    <th scope="col" sortable="area" (sort)="onSort($event)">Product</th>
+                                    <th scope="col" sortable="message" (sort)="onSort($event)">Messages</th>
+                                    <th scope="col">Finalize</th>
+                                    <th scope="col">Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td scope="row">BC</td>
+                                    <td scope="row">BC</td>
+                                    <td scope="row">BC</td>
+                                    <td scope="row">BC</td>
+                                    <td scope="row">BC</td>
+                                    <td scope="row">BC</td>
+                                </tr>
+                            </tbody>
+                        </table>
+
+                        <div class="d-flex justify-content-between p-2">
+                            <ngb-pagination [collectionSize]="total$ | async" [(page)]="service.page"
+                                [pageSize]="service.pageSize">
+                            </ngb-pagination>
+
+                            <!-- <select class="custom-select" style="width: auto" name="pageSize"
+                                [(ngModel)]="service.pageSize">
+                                <option [ngValue]="2">2 items per page</option>
+                                <option [ngValue]="4">4 items per page</option>
+                                <option [ngValue]="6">6 items per page</option>
+                            </select> -->
+                        </div>
+
+                    </form>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /Recent Table -->
+
+
     <footer class="footer footer-default">
         <div class="container">
             <nav>
