--- a/frontend/src/app/pages/userprofile/userprofile.component.html
+++ b/frontend/src/app/pages/userprofile/userprofile.component.html
@@ -21,7 +21,7 @@
 
         <div class="row justify-content-center">
           <div class="social-description">
-            <a class="btn btn-primary btn-lg btn-round">Broadcast</a>
+            <a class="btn btn-primary btn-lg btn-round" routerLink="/userprofile/broadcast/{{}}">Broadcast</a>
           </div>
           <div class="social-description">
             <a href="#button" class="btn btn-primary btn-lg btn-round">Purchase History</a>
@@ -30,10 +30,8 @@
             <a href="#button" class="btn btn-primary btn-lg btn-round">Bookmarks</a>
           </div>
         </div>
-
       </div>
     </div>
-
   </div>
 
 
@@ -46,9 +44,7 @@
           <form>
             <div class="form-group form-inline">
               Search <input class="form-control ml-2" type="text" name="searchTerm">
-
             </div>
-
             <table class="table table-striped">
               <thead>
                 <tr>
