--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -5,28 +5,37 @@
             <a class="navbar-brand">
                 Nexum
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" (click)="sidebarToggle()">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
+                aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-bar bar1"></span>
                 <span class="navbar-toggler-bar bar2"></span>
                 <span class="navbar-toggler-bar bar3"></span>
             </button>
+
         </div>
-        
+
         <div class="collapse navbar-collapse" data-nav-image="assets/img/blurred-image-1.jpg" data-color="orange">
             <ul class="navbar-nav ml-auto">
-              
+
                 <div class="col">
                     <div ngbDropdown class="d-inline-block">
-                        <button class="btn btn-primary btn-simple btn-round btn-neutral" id="dropdownBasic1" type="button" ngbDropdownToggle>
+                        <button class="btn btn-primary btn-simple btn-round btn-neutral" id="dropdownBasic1"
+                            type="button" ngbDropdownToggle>
                             <i class="now-ui-icons users_single-02"></i> Profile
                         </button>
-                      <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-                        <button ngbDropdownItem>Edit Profile</button>
-                        <button ngbDropdownItem>Settings</button>
-                        <button ngbDropdownItem>Sign Out</button>
-                      </div>
+                        <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+                            <button ngbDropdownItem>Edit Profile</button>
+                            <button ngbDropdownItem>Settings</button>
+                            <button ngbDropdownItem>Sign Out</button>
+                        </div>
+                        <button *ngIf="[(currentUser)]=='customer'" class="btn btn-primary btn-round" type="button"
+                            routerLink="/userprofile/sellerprofile" (click)="changeUser()">Switch to Seller</button>
+                        <button *ngIf="[(currentUser)]=='seller'" class="btn btn-primary btn-round" type="button"
+                            routerLink="/userprofile/customerprofile" (click)="changeUser()">Switch to Customer</button>
+
                     </div>
-                  </div>
+
+                </div>
             </ul>
         </div>
     </div>
