selling component frontend

--- a/frontend/src/app/components/broadcast/broadcast.component.html
+++ b/frontend/src/app/components/broadcast/broadcast.component.html
@@ -1,1 +1,21 @@
-<h1>Broadcast Page</h1>
+<!-- <div class="mt-5">
+    <div ngbDropdown class="dropdown">
+        <a class="nav-link dropdown-toggle" ngbDropdownToggle>
+            <p>
+                Dropdown
+            </p>
+        </a>
+        <div ngbDropdownMenu class="dropdown-menu">
+            <a class="dropdown-item" href="#">Actionn</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+    </div>
+</div> -->
+
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#example-navbar-icons"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-bar bar1"></span>
+    <span class="navbar-toggler-bar bar2"></span>
+    <span class="navbar-toggler-bar bar3"></span>
+</button>
