--- a/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
@@ -21,7 +21,7 @@
 
         <div class="row justify-content-center">
           <div class="social-description">
-            <a class="btn btn-primary btn-lg btn-round" routerLink="/userprofile/broadcast">Broadcast</a>
+            <a class="btn btn-primary btn-lg btn-round" routerLink="/userprofile/selling">Selling</a>
           </div>
           <div class="social-description">
             <a href="#button" class="btn btn-primary btn-lg btn-round">Purchase History</a>
