--- a/frontend/src/app/components/broadcast/broadcast.component.html
+++ b/frontend/src/app/components/broadcast/broadcast.component.html
@@ -5,6 +5,47 @@
         <div class="col-md-4 content-center">
             <div class="card card-login card-plain">
                 <form class="form" method="" action="">
+
+                    <div ngbDropdown>
+                        <button class="btn btn-primary btn-simple btn-round btn-neutral" id="dropdownBasic1"
+                            type="button" ngbDropdownToggle>
+                            <i class="now-ui-icons users_single-02"></i> Product Type
+                        </button>
+                        <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+                            <button ngbDropdownItem>Laptop</button>
+                            <button ngbDropdownItem>Televisions</button>
+                            <button ngbDropdownItem>Hometheatres</button>
+                            <button ngbDropdownItem>Other</button>
+                        </div>
+                    </div>
+
+                    <div ngbDropdown>
+                        <button class="btn btn-primary btn-simple btn-round btn-neutral" id="dropdownBasic1"
+                            type="button" ngbDropdownToggle>
+                            <i class="now-ui-icons users_single-02"></i> Price Range
+                        </button>
+                        <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+                            <button ngbDropdownItem>0 - 10000</button>
+                            <button ngbDropdownItem>10000 - 45000</button>
+                            <button ngbDropdownItem>45000 - 100000</button>
+                            <button ngbDropdownItem>100000+</button>
+                        </div>
+                    </div>
+
+                    <div ngbDropdown >
+                            <button class="btn btn-primary btn-simple btn-round btn-neutral" id="dropdownBasic1"
+                                type="button" ngbDropdownToggle>
+                                <i class="now-ui-icons users_single-02"></i> Brand Name
+                            </button>
+                            <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+                                <button ngbDropdownItem>Asus</button>
+                                <button ngbDropdownItem>Dell</button>
+                                <button ngbDropdownItem>HP</button>
+                                <button ngbDropdownItem>Other</button>
+                            </div>
+                        </div>
+
+
                     <div class="header header-primary text-center">
                     </div>
 
@@ -18,35 +59,13 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text">  <i class="now-ui-icons users_circle-08"></i></span>
                         </div>
-                          <input type="text" class="form-control" placeholder="First Name..." (focus)="focus=true" (blur)="focus=false" >
-                      </div>
-                      <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus1===true}">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="now-ui-icons text_caps-small"></i></span>
-                        </div>
-                          <input type="text" placeholder="Last Name..." class="form-control" (focus)="focus1=true" (blur)="focus1=false"/>
+                          <input type="text" class="form-control" placeholder="Further details..." (focus)="focus=true" (blur)="focus=false" >
                       </div>
                     </div>
                     <div class="footer text-center">
-                        <a href="#pablo" class="btn btn-primary btn-round btn-lg btn-block">Get Started</a>
+                        <a href="#pablo" class="btn btn-primary btn-round btn-lg btn-block">Broadcast</a>
                     </div>
-                    <div class="pull-left">
-                        <h6>
-                            <a href="#pablo" class="link">Create Account</a>
-                        </h6>
-                    </div>
-                    <div class="pull-right">
-                        <h6>
-                            <a href="#pablo" class="link">Need Help?</a>
-                        </h6>
-  
-                        
-                        
-                          
-                      
-                  
-  
-                    </div>
+                    
                 </form>
             </div>
         </div>
