--- a/frontend/src/app/components/broadcast/broadcast.component.html
+++ b/frontend/src/app/components/broadcast/broadcast.component.html
@@ -116,6 +116,7 @@
                 <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
             </div>
         </div>
+        <!-- commented -->
     </footer>
   </div>
   
