add admin radio button

--- a/frontend/src/app/components/signin/signin.component.html
+++ b/frontend/src/app/components/signin/signin.component.html
@@ -24,6 +24,12 @@
                             <span class="form-check-sign"></span>
                             Seller
                         </label>
+
+                        <label class="form-check-label">
+                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1">
+                            <span class="form-check-sign"></span>
+                            Admin
+                        </label>
                     </div>
                     <div class="form-check form-check-radio black">
                         
